# whitespace_interp

./: .pre-commit-config.yaml  Makefile  main.py  pyproject.toml  readme.md  tests.py
.github/workflows/: format.yml  pylint.yml  pytest.yml
src/: code_parser.py  commands.py  imps.py  interpreter.py  main.py
tests/: test_code_parser.py  test_e2e.py  test_interpreter.py
