[tool.poetry]
name = "whitespace_interpreter"
version = "0.1.0"
description = "Whitespace interpreter - simpliest programming language."
authors = ["Ross <rostikvunarchuk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pre-commit = "^3.4.0"
pylint = "^2.14.5"
black = "^22.6.0"
isort = "^5.10.1"
bandit = "^1.7.4"
xenon = "^0.9.0"
mypy = "^0.971"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  | venv/
  | .idea/
)/'''

[tool.isort]
multi_line_output = 3
profile = "black"
include_trailing_comma = true

[tool.pylint.master]
fail-under = 9.0
init-hook="import sys; sys.path.append('src/')"


[tool.pylint]
max-line-length = 120
disable=["C0114", "C0116"]

[tool.bandit]
tests = ["B201", "B301"]
skips = ["B101", "B601"]

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
no_implicit_optional = true
check_untyped_defs = true
show_error_codes = true


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
pythonpath = "src/"
testpaths = "tests"
